# University_OOP

Assignment 1/src/Controller/: Controller.java
Assignment 1/src/Model/: Animal.java  Bird.java  Cow.java  Pig.java
Assignment 1/src/Repository/: MemoryRepository.java  MyException.java  RepositoryInterface.java
Assignment 1/src/View/: AppView.java
Project Euler/Prob2/: Prob2.sln
Project Euler/Prob2/Debug/: Prob2.ilk
Project Euler/Prob2/Prob2/: Prob2.vcxproj  Source.c
Project Euler/Prob2/Prob2/Debug/: vc142.idb
Project Euler/Prob2/Prob2/Debug/Prob2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Prob2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Seminarii/Seminar1/: Seminar1.sln
Seminarii/Seminar1/Seminar1/: Planet.c  Planet.h  Seminar1.vcxproj  Seminar1.vcxproj.filters  main.c
t2-917trancanaomi/: CMakeLists.txt  HospitalDepartment.cpp  HospitalDepartment.h  RepositoryInherit.h  UI.cpp  repository.cpp  repository.h  service.cpp  service.h
