cmake_minimum_required(VERSION 3.21)
project(t2_917trancanaomi_1)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(t2_917trancanaomi_1
        .idea/.gitignore
        .idea/misc.xml
        .idea/modules.xml
        .idea/t2-917trancanaomi-1.iml
        .idea/vcs.xml
        .idea/workspace.xml
        .gitignore
        HospitalDepartment.cpp
        HospitalDepartment.h
        main.cpp
        README.md
        repository.cpp
        repository.h
        RepositoryInherit.h
        service.cpp
        service.h
        UI.cpp)
